[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "resy-sniper"
version = "0.0.1"
dependencies = [
  "requests",
]
requires-python = ">=3.11"
authors = [
  {name = "Max Klein", email = "telamonian@hotmail.com"}
]
description = "A python clone of resy-booking-bot"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["resy", "reservation, "bot", "python"]
classifiers = [
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/telamonian/resy_sniper"
#Documentation = "https://readthedocs.org"
#Repository = "https://github.com/me/spam.git"
#"Bug Tracker" = "https://github.com/me/spam/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true


[tool.pytest.ini_options]
#addopts = "--cov=dispatch_sim --cov-report=term-missing"
#norecursedirs = ["test/data"]
#python_files = [
#    "test_*.py",
#]
#testpaths = [
#    "test",
#]
#python_classes = ["Test"]
#python_functions = ["test"]
